# help-me-doctor

./: .gitignore  AGENT_SYSTEM.md  IMPLEMENTATION_PLAN.md  README.md  SIMPLIFIED_3_4_AGENT_SYSTEM.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  seed.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  environment.yml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: coordinator.py  graph.py  input_router.py  knowledge_matcher.py  response_formatter.py  state.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  chat.py  usage.py
backend/app/auth/: jwt.py  password.py  schemas.py
backend/app/db/: collections.py  mongo.py
backend/app/models/: chat.py  user.py
backend/app/rag/: embedder.py  vertex_search.py
backend/app/schemas/: agent.py  chat.py
backend/app/services/: usage.py
backend/scripts/: ingest_mongo.py  ingest_vertex.py
data/: chas_clinics_singapore.csv  legal_medicine_knowledge_base.csv  legal_medicine_specialists_directory.csv  master_legal_medicine_knowledge_base.csv  master_medical_knowledge_base.csv  medical_condition_knowledge_base.csv  singapore_doctors_database.csv  singapore_hospitals_database.csv
frontend/: Dockerfile  Dockerfile.dev  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/layouts/: auth.vue  default.vue
frontend/pages/: chat.vue  index.vue  login.vue  register.vue
infrastructure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
presentation/: Help Me Doctor.html
(+26 files in other folders)
